fix: alignment of items on home page

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,10 +1,12 @@
 #home {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding-left: 15%;
-    padding-top: 10%;
-    min-height: 100vh;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  max-width: 1000px;
+  min-height: 100vh;
+  padding-top: 200px;
+  text-align: center;
 }
 
 .Typist {
@@ -24,18 +26,17 @@
   text-align: center;
 }
 .home-name {
-  font-family: "NTR", sans-serif;
   color: var(--green-bright);
+  font-family: "NTR", sans-serif;
   font-weight: bold;
   font-size: 86px;
 }
 .home-headline { 
-  margin-top: -36px;
-  font-family: "NTR", sans-serif;
   color: var(--slate);
-  text-align: center;
-  font-weight: 300;
+  font-family: "NTR", sans-serif;
   font-size: 48px;
+  font-weight: 300;
+  text-align: center;
 }
 .home-bio { 
   color: var(--slate);
@@ -46,16 +47,22 @@
   padding-bottom: 50px;
 }
 .home-contact { 
-  font-size: 22px;
-  font-weight: bolder;
-  font-family: "NTR", sans-serif;
   align-self: center;
-  padding: 10px 30px;
+  color: var(--green-bright);
   cursor: pointer;
   border: 1px solid var(--green-bright);
   border-radius: 4px;
+  font-size: 22px;
+  font-weight: bolder;
+  font-family: "NTR", sans-serif;
+  padding: 10px 30px;
+  text-decoration: none; /* Remove underline using a CSS class */
 }
 
 .home-contact:hover {
   background-color: var(--lightest-navy);
+}
+
+b {
+  font-size: 17px;
 }
